--- a/Makefile.in
+++ b/Makefile.in
@@ -70,7 +70,7 @@ am__include = @am__include@
 am__quote = @am__quote@
 install_sh = @install_sh@
 
-SUBDIRS = src include examples docs
+SUBDIRS = src include examples docs tests
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/config/mkinstalldirs
