--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,13 +1,17 @@
 
-noinst_PROGRAMS = test1 test2
+noinst_PROGRAMS = test1 test2 test3
 
 test1_SOURCES = test1.cpp
 
 test2_SOURCES = test2.cpp
 
+test3_SOURCES = test3.cpp
+
 test1_LDADD = $(top_builddir)/src/libtclap.a
 
 test2_LDADD = $(top_builddir)/src/libtclap.a
+
+test3_LDADD = $(top_builddir)/src/libtclap.a
 
 INCLUDES = -I$(top_builddir)/include
 
