--- a/include/tclap/Makefile.am
+++ b/include/tclap/Makefile.am
@@ -4,7 +4,9 @@ libtclapincludedir = $(includedir)/tclap
 libtclapinclude_HEADERS = ArgException.h \
 			 CmdLine.h \
 			 MultiArg.h \
+			 UnlabeledMultiArg.h \
 			 ValueArg.h \
+			 UnlabeledValueArg.h \
 			 Visitor.h Arg.h \
 			 HelpVisitor.h \
 			 SwitchArg.h \
