--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,3 +4,5 @@ lib_LIBRARIES = libtclap.a
 libtclap_a_SOURCES = Arg.cpp CmdLine.cpp SwitchArg.cpp
 
 INCLUDES = -I$(top_srcdir)/include
+
+CXXFLAGS = -Wall
