--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 AC_INIT(Makefile.am)
-AC_PREREQ(2.50)
+#AC_PREREQ(2.50)
 AC_CONFIG_AUX_DIR(config)
 AM_CONFIG_HEADER(config/config.h)
-AM_INIT_AUTOMAKE(tclap,0.9.5)
+AM_INIT_AUTOMAKE(tclap,0.9.6)
 AC_PROG_CXX
 AC_CXX_HAVE_SSTREAM
 AC_CXX_HAVE_STRSTREAM
