--- a/include/tclap/Makefile.am
+++ b/include/tclap/Makefile.am
@@ -3,6 +3,8 @@ libtclapincludedir = $(includedir)/tclap
 
 libtclapinclude_HEADERS = ArgException.h \
 			 CmdLine.h \
+			 CommandLine.h \
+			 XorHandler.h \
 			 MultiArg.h \
 			 UnlabeledMultiArg.h \
 			 ValueArg.h \
