--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 
 lib_LIBRARIES = libtclap.a
 
-libtclap_a_SOURCES = Arg.cpp CmdLine.cpp SwitchArg.cpp
+libtclap_a_SOURCES = Arg.cpp CmdLine.cpp SwitchArg.cpp XorHandler.cpp
 
 INCLUDES = -I$(top_srcdir)/include
 
