--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,4 +5,4 @@ libtclap_a_SOURCES = Arg.cpp CmdLine.cpp SwitchArg.cpp XorHandler.cpp
 
 INCLUDES = -I$(top_srcdir)/include
 
-CXXFLAGS = -Wall
+AM_CXXFLAGS = -Wall
