--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,11 @@
 
 lib_LIBRARIES = libtclap.a
 
-libtclap_a_SOURCES = Arg.cpp CmdLine.cpp SwitchArg.cpp XorHandler.cpp
+libtclap_a_SOURCES = Arg.cpp \
+					 CmdLine.cpp \
+					 SwitchArg.cpp \
+					 XorHandler.cpp \
+					 PrintSensibly.cpp
 
 INCLUDES = -I$(top_srcdir)/include
 
