added new test for CmdLine arg

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,5 +1,5 @@
 
-noinst_PROGRAMS = test1 test2 test3 test4 test5 test6 test7
+noinst_PROGRAMS = test1 test2 test3 test4 test5 test6 test7 test8
 
 test1_SOURCES = test1.cpp
 test2_SOURCES = test2.cpp
@@ -8,6 +8,7 @@ test4_SOURCES = test4.cpp
 test5_SOURCES = test5.cpp
 test6_SOURCES = test6.cpp
 test7_SOURCES = test7.cpp
+test8_SOURCES = test8.cpp
 
 test1_LDADD = $(top_builddir)/src/libtclap.a
 test2_LDADD = $(top_builddir)/src/libtclap.a
@@ -16,6 +17,7 @@ test4_LDADD = $(top_builddir)/src/libtclap.a
 test5_LDADD = $(top_builddir)/src/libtclap.a
 test6_LDADD = $(top_builddir)/src/libtclap.a
 test7_LDADD = $(top_builddir)/src/libtclap.a
+test8_LDADD = $(top_builddir)/src/libtclap.a
 
 INCLUDES = -I$(top_builddir)/include
 
