Moving the implementation of tclap to the header files presented me with two major problems. 1) There where static functions and variables that could cause link errors if tclap where used in different files (e.g. file1.cc and file2.cc included tclap then compiling both files would give hard symbols for some variables which would produce multiple definition when linking) 2) The dependencies of tclap was a bit strange (CmdLine depends on Args and Args depends on CmdLine for instance)
The first problem I solved by removing all static variables putting them in
static member functions (which are weak-symbols). So for instance every where
there previously was something like x = _delimiter there now is x = delimiter()
or in case of write acces delimiterRef() = x instead of _delimiter = x (I had
to append the Ref because there where already functions with the same name as
the variables). To solve the problem with static functions I simply inlined
them. This causes the compiler to produce a weak symbol or inline if
appropriate. We can put the functions inside the class declaration later to
make the code look better. This worked fine in all but two cases. In the
ValueArg and MultiArg classes I had to do a "hack" to work around the
specialization template for extractValue<std::string>. The code for this is
very simple but it might look strange an stupid at first but it is only to
resolve the specialisation to a weak symbol. What I did was I put the
implementations of extractValue in a helper class and I could then create a
specialized class instead of function and everything worked out. I think now in
retrospect there might be better solutions to this but I'll think a bit more on
it (maybe some type of inlining on the specialized version would suffice but
I'm not sure).

To handle the dependencies I had to do some rewriting. The first step was to
introduce a new class CmdLineInterface that is a purely abstract base of
CmdLine that specifies the functions needed by Arg and frie

--- a/include/tclap/Makefile.am
+++ b/include/tclap/Makefile.am
@@ -1,9 +1,10 @@
 
 libtclapincludedir = $(includedir)/tclap
 
-libtclapinclude_HEADERS = ArgException.h \
+libtclapinclude_HEADERS = \
+			 CmdLineInterface.h \
+			 ArgException.h \
 			 CmdLine.h \
-			 CommandLine.h \
 			 XorHandler.h \
 			 MultiArg.h \
 			 UnlabeledMultiArg.h \
