changed output around

--- a/include/tclap/Makefile.am
+++ b/include/tclap/Makefile.am
@@ -15,5 +15,6 @@ libtclapinclude_HEADERS = \
 			 SwitchArg.h \
 			 VersionVisitor.h \
 			 IgnoreRestVisitor.h \
-			 PrintSensibly.h
+			 CmdLineOutput.h \
+			 StdOutput.h
 
