--- a/configure.in
+++ b/configure.in
@@ -19,4 +19,4 @@ AC_OUTPUT([ Makefile \
 		   msc/Makefile  \
 		   msc/examples/Makefile  \
 		   tests/Makefile], \
-		   [chmod a+x tests/*.sh])
+		   [chmod a+x $ac_top_srcdir/tests/*.sh])
