fix to handle optional unlabeled args

--- a/include/tclap/Makefile.am
+++ b/include/tclap/Makefile.am
@@ -19,6 +19,7 @@ libtclapinclude_HEADERS = \
 			 CmdLineOutput.h \
 			 StdOutput.h \
 			 DocBookOutput.h \
+			 OptionalUnlabeledTracker.h \
 			 Constraint.h \
 			 ValuesConstraint.h
 
