made a fix for a bug where - chars were within unlabeled value args

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -59,7 +59,8 @@ TESTS = test1.sh \
 		test57.sh \
 		test58.sh \
 		test59.sh \
-		test60.sh
+		test60.sh \
+		test61.sh
 
 EXTRA_DIST = $(TESTS) \
 			 test1.out \
@@ -121,6 +122,7 @@ EXTRA_DIST = $(TESTS) \
 			 test57.out \
 			 test58.out \
 			 test59.out \
-			 test60.out
+			 test60.out \
+			 test61.out
 
 CLEANFILES = tmp.out
