--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,5 +1,6 @@
 
-noinst_PROGRAMS = test1 test2 test3 test4 test5 test6 test7 test8 test9 test10
+noinst_PROGRAMS = test1 test2 test3 test4 test5 test6 test7 test8 test9 \
+			test10 test11 test12
 
 test1_SOURCES = test1.cpp
 test2_SOURCES = test2.cpp
@@ -11,6 +12,8 @@ test7_SOURCES = test7.cpp
 test8_SOURCES = test8.cpp
 test9_SOURCES = test9.cpp
 test10_SOURCES = test10.cpp
+test11_SOURCES = test11.cpp
+test12_SOURCES = test12.cpp
 
 INCLUDES = -I$(top_srcdir)/include
 
