Refactoring of the arg-traits functionality. The purpose is to make it easier to make you own classes, and types defined in the standard library work well with tclap. I'll try to write up some documenation of how to achieve this as-well.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,6 +1,6 @@
 
 noinst_PROGRAMS = test1 test2 test3 test4 test5 test6 test7 test8 test9 \
-			test10 test11 test12 test13
+			test10 test11 test12 test13 test14 test15 test16
 
 test1_SOURCES = test1.cpp
 test2_SOURCES = test2.cpp
@@ -15,6 +15,9 @@ test10_SOURCES = test10.cpp
 test11_SOURCES = test11.cpp
 test12_SOURCES = test12.cpp
 test13_SOURCES = test13.cpp
+test14_SOURCES = test14.cpp
+test15_SOURCES = test15.cpp
+test16_SOURCES = test16.cpp
 
 INCLUDES = -I$(top_srcdir)/include
 
