--- a/configure.in
+++ b/configure.in
@@ -6,6 +6,7 @@ AM_INIT_AUTOMAKE(tclap,1.1.0)
 AC_PROG_CXX
 AC_CXX_HAVE_SSTREAM
 AC_CXX_HAVE_STRSTREAM
+AC_CXX_HAVE_LONG_LONG
 AC_CHECK_PROG(DOT,dot,YES,NO)
 AC_PROG_RANLIB
 AC_PROG_INSTALL
