Added Traits files to the list of files to be installed.

--- a/include/tclap/Makefile.am
+++ b/include/tclap/Makefile.am
@@ -22,5 +22,7 @@ libtclapinclude_HEADERS = \
 			 ZshCompletionOutput.h \
 			 OptionalUnlabeledTracker.h \
 			 Constraint.h \
-			 ValuesConstraint.h
+			 ValuesConstraint.h \
+			 ArgTraits.h \
+			 StandardTraits.h
 
