Allow internal handling of parse errors to be turned off. This allows exceptions for parse errors to be propagated to the caller.  Exiting the program in parse is a bad idea generally, as we have no way of knowing what cleanup needs to be done in the main program.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -67,7 +67,8 @@ TESTS = test1.sh \
 		test65.sh \
 		test66.sh \
 		test67.sh \
-		test68.sh
+		test68.sh \
+		test69.sh
 
 EXTRA_DIST = $(TESTS) \
 			 test1.out \
@@ -137,6 +138,7 @@ EXTRA_DIST = $(TESTS) \
 			 test65.out \
 			 test66.out \
 			 test67.out \
-			 test68.out
+			 test68.out \
+			 test69.out
 
 CLEANFILES = tmp.out
