applying patches to make gnu compiler args conditional, to install docs, and to add pkgconfig support to the installation

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -10,7 +10,20 @@ all:
 
 endif
 
-EXTRA_DIST = index.html manual.html style.css manual.xml
+EXTRA_DIST = manual.xml
+dist_doc_DATA = index.html manual.html style.css
+
+install-data-local :
+	$(MKDIR_P) $(DESTDIR)$(docdir)/html
+	cp -R html $(DESTDIR)$(docdir)/html
+
+uninstall-local :
+	chmod -R +w $(DESTDIR)$(docdir)/html
+	rm -rf $(DESTDIR)$(docdir)/html
+
+dist-hook :
+	$(MKDIR_P) $(distdir)/html
+	cp -R html $(distdir)
 
 clean-local:
 	$(RM) -rf html
