--- a/Makefile.am
+++ b/Makefile.am
@@ -3,3 +3,8 @@ ACLOCAL_AMFLAGS = -I config
 
 SUBDIRS = include examples docs tests msc config
 
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = $(PACKAGE).pc
+EXTRA_DIST = $(PACKAGE).pc.in
+
+DISTCLEANFILES = $(PACKAGE).pc
