--- a/configure.in
+++ b/configure.in
@@ -11,7 +11,11 @@ AC_CHECK_PROG(DOT,dot,YES,NO)
 AC_PROG_RANLIB
 AC_PROG_INSTALL
 BB_ENABLE_DOXYGEN
+
+AM_CONDITIONAL([HAVE_GNU_COMPILERS], [test x$ac_cv_cxx_compiler_gnu = xyes])
+
 AC_OUTPUT([ Makefile \
+	   tclap.pc
            examples/Makefile \
 		   include/Makefile \
 		   include/tclap/Makefile \
