added more compiler warnings

--- a/configure.in
+++ b/configure.in
@@ -11,6 +11,7 @@ AC_CHECK_PROG(DOT,dot,YES,NO)
 AC_PROG_RANLIB
 AC_PROG_INSTALL
 BB_ENABLE_DOXYGEN
+CXXFLAGS=-Weffc++
 
 AM_CONDITIONAL([HAVE_GNU_COMPILERS], [test x$ac_cv_cxx_compiler_gnu = xyes])
 
