--- a/configure.in
+++ b/configure.in
@@ -11,12 +11,14 @@ AC_CHECK_PROG(DOT,dot,YES,NO)
 AC_PROG_RANLIB
 AC_PROG_INSTALL
 BB_ENABLE_DOXYGEN
-CXXFLAGS=-Weffc++
+
+HAVE_WARN_EFFECTIVE_CXX
+CXXFLAGS="$CXXFLAGS $WARN_EFFECTIVE_CXX"
 
 AM_CONDITIONAL([HAVE_GNU_COMPILERS], [test x$ac_cv_cxx_compiler_gnu = xyes])
 
 AC_OUTPUT([ Makefile \
-	   tclap.pc
+	   tclap.pc \
            examples/Makefile \
 		   include/Makefile \
 		   include/tclap/Makefile \
