being slightly more precise about what we clean

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -27,5 +27,5 @@ dist-hook :
 	cp -R $(abs_srcdir)/html $(distdir)
 
 clean-local:
-	$(RM) -rf $(abs_srcdir)/html
+	$(RM) -rf $(abs_srcdir)/html/*
 
