updated changelog, news, docs, and added tests for flag and name defines

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -76,7 +76,8 @@ TESTS = test1.sh \
 		test74.sh \
 		test75.sh \
 		test76.sh \
-		test77.sh
+		test77.sh \
+		test78.sh
 
 EXTRA_DIST = $(TESTS) \
 			 test1.out \
@@ -155,6 +156,7 @@ EXTRA_DIST = $(TESTS) \
 			 test74.out \
 			 test75.out \
 			 test76.out \
-			 test77.out
+			 test77.out \
+			 test78.out
 
 CLEANFILES = tmp.out
