--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,7 +1,7 @@
 
 noinst_PROGRAMS = test1 test2 test3 test4 test5 test6 test7 test8 test9 \
 			test10 test11 test12 test13 test14 test15 test16 \
-			test17 test18 test19 test20
+			test17 test18 test19 test20 test21
 
 test1_SOURCES = test1.cpp
 test2_SOURCES = test2.cpp
@@ -23,6 +23,7 @@ test17_SOURCES = test17.cpp test17-a.cpp
 test18_SOURCES = test18.cpp
 test19_SOURCES = test19.cpp
 test20_SOURCES = test20.cpp
+test21_SOURCES = test21.cpp
 
 AM_CPPFLAGS = -I$(top_srcdir)/include
 
