--- a/configure.in
+++ b/configure.in
@@ -13,7 +13,7 @@ AC_PROG_INSTALL
 BB_ENABLE_DOXYGEN
 
 HAVE_WARN_EFFECTIVE_CXX
-CXXFLAGS="$CXXFLAGS $WARN_EFFECTIVE_CXX"
+CXXFLAGS="$CXXFLAGS $WARN_EFFECTIVE_CXX -std=c++0x"
 
 AM_CONDITIONAL([HAVE_GNU_COMPILERS], [test x$ac_cv_cxx_compiler_gnu = xyes])
 
