Make all types have ValueLike traits by default.
This allows new types to be added without any fuzz (no need to specify
the traits) if it has operator>>. It also removes the need to manually
specify the ArgTrait for all built in types (such as long, bool, char,
float etc).

ArgTraits now works in the following way:

1) If there exists a specialization of ArgTraits for type X, use it.

2) If no specialization exists but X has the typename
X::ValueCategory, use the specialization for X::ValueCategory.

3) If neither (1) nor (2) defines the trait, use the default which is
ValueLike.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -81,7 +81,8 @@ TESTS = test1.sh \
 		test79.sh \
 		test80.sh \
 		test81.sh \
-		test82.sh
+		test82.sh \
+		test83.sh
 
 EXTRA_DIST = $(TESTS) \
 			 test1.out \
@@ -165,6 +166,7 @@ EXTRA_DIST = $(TESTS) \
 			 test79.out \
 			 test80.out \
 			 test81.out \
-			 test82.out
+			 test82.out \
+			 test83.out
 
 CLEANFILES = tmp.out
