Added new test after merging traits branch.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,7 +1,8 @@
 
 noinst_PROGRAMS = test1 test2 test3 test4 test5 test6 test7 test8 test9 \
 			test10 test11 test12 test13 test14 test15 test16 \
-			test17 test18 test19 test20 test21 test22 test23 test24 test25
+			test17 test18 test19 test20 test21 test22 test23 test24 \
+			test25 test26
 
 test1_SOURCES = test1.cpp
 test2_SOURCES = test2.cpp
@@ -28,6 +29,7 @@ test22_SOURCES = test22.cpp
 test23_SOURCES = test23.cpp
 test24_SOURCES = test24.cpp
 test25_SOURCES = test25.cpp
+test26_SOURCES = test26.cpp
 
 AM_CPPFLAGS = -I$(top_srcdir)/include
 
