--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,11 @@ examples/test[0-9][0-9]
 examples/test[0-9]
 Makefile
 tclap.pc
+config/test-driver
 tests/tmp.out
+tests/*.trs
+tests/*.log
+
+
+
+
