--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -88,7 +88,13 @@ TESTS = test1.sh \
 		test86.sh \
 		test87.sh \
 		test88.sh \
-		test89.sh
+		test89.sh \
+		test100.sh \
+		test101.sh \
+		test102.sh \
+		test103.sh \
+		test104.sh \
+		test105.sh
 
 EXTRA_DIST = $(TESTS) \
 			 test1.out \
@@ -179,6 +185,12 @@ EXTRA_DIST = $(TESTS) \
 			 test86.out \
 			 test87.out \
 			 test88.out \
-			 test89.out
+			 test89.out \
+			 test100.out \
+			 test101.out \
+			 test102.out \
+			 test103.out \
+			 test104.out \
+			 test105.out
 
 CLEANFILES = tmp.out
