Prototype implementation of command alias.
Not suitable for use. More work would be required to figure out a good
way to implement help output for this (right now just did something
naive to be able to test a bit).

--- a/include/tclap/Makefile.am
+++ b/include/tclap/Makefile.am
@@ -3,6 +3,7 @@ libtclapincludedir = $(includedir)/tclap
 
 libtclapinclude_HEADERS = \
 			 CmdLineInterface.h \
+			 AliasArg.h \
 			 ArgException.h \
 			 CmdLine.h \
 			 XorHandler.h \
