Add missing ArgGroup.h from Makefile

--- a/include/tclap/Makefile.am
+++ b/include/tclap/Makefile.am
@@ -4,6 +4,7 @@ libtclapincludedir = $(includedir)/tclap
 libtclapinclude_HEADERS = \
 			 CmdLineInterface.h \
 			 ArgException.h \
+			 ArgGroup.h \
 			 CmdLine.h \
 			 XorHandler.h \
 			 MultiArg.h \
