--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -4,7 +4,7 @@ noinst_PROGRAMS = test1 test2 test3 test4 test5 test6 test7 test8	\
 			test15 test16 test17 test18 test19 test20	\
 			test21 test22 test23 test24 test25 test26	\
 			test27 test28 test29 test30 test31 test32	\
-			test33 test34 test35 test36 test37 test38	\
+			test33 test34 test35 test36 test38		\
 			test39 test40
 
 test1_SOURCES = test1.cpp
@@ -43,7 +43,6 @@ test33_SOURCES = test33.cpp
 test34_SOURCES = test34.cpp
 test35_SOURCES = test35.cpp
 test36_SOURCES = test36.cpp
-test37_SOURCES = test37.cpp
 test38_SOURCES = test38.cpp
 test39_SOURCES = test39.cpp
 test40_SOURCES = test40.cpp
