Remove NuGet tasks from build pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,11 +16,11 @@ variables:
   appxPackageDir: '$(build.artifactStagingDirectory)\AppxPackages\\'
 
 steps:
-- task: NuGetToolInstaller@1
+#- task: NuGetToolInstaller@1
 
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
+#- task: NuGetCommand@2
+#  inputs:
+#    restoreSolution: '$(solution)'
 
 - task: VSBuild@1
   inputs:
