Use msbuild of version 15.0 aka VS2017

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,7 @@ steps:
 
 - task: MSBuild@1
   inputs:
+    msbuildVersion: '15.0'
     platform: '$(buildPlatform)'
     solution: '$(solution)'
     configuration: '$(buildConfiguration)'
