Take test reports *.trx for publishing

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,4 +63,4 @@ steps:
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'VSTest'
-    testResultsFiles: '**/TEST-*.xml'
+    testResultsFiles: '**/*.trx'
