--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ image: Visual Studio 2017
 branches:
   only:
     - master
-    - feat/*
+    - /feat\/.*/
 configuration: Release
 platform:
 - x86
